--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
-<!DOCTYPE html>
-<html>
-    <head>
+[33mcommit b7c22d2f480efd40d0ef2a097effe5a8d1481a02[m[33m ([m[1;36mHEAD -> [m[1;32mmain[m[33m)[m
+Author: your name <abc@gmail.com>
+Date:   Thu Aug 26 09:31:18 2021 +0700
 
-    </head>
+    add index.html
 
-    <body>
-        <h1>Thanh Tu Cute Pho Mai Que</h1>
-    </body>
-</html>
+[33mcommit 1c7062da3aeb39fcaec3f211e4ce08b31c33f2b9[m[33m ([m[1;31morigin/main[m[33m, [m[1;31morigin/HEAD[m[33m)[m
+Author: your name <abc@gmail.com>
+Date:   Wed Aug 25 10:00:34 2021 +0700
+
+    Create sh.exe.stackdump
+    
+    HTML.CSS
+
+[33mcommit 9448caf598b8a414a28167e84d7946fe375b6893[m
+Author: ThanhTu0301 <thanhtuluu2002@gmail.com>
+Date:   Wed Aug 25 09:33:13 2021 +0700
+
+    Add II.Home.Men/ file
+
+[33mcommit 436115a60f24608249fddcf9c22c056510aca723[m
+Author: ThanhTu0301 <89456038+ThanhTu0301@users.noreply.github.com>
+Date:   Wed Aug 25 09:15:27 2021 +0700
+
+    Initial commit
